--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -23,6 +23,8 @@
  color:blue !important;
  background-color:white !important;
 }
+
 .home-subcontainer-header{
-    font-size:50px;
+    font-size:40px;
+    letter-spacing:4px;
 }
