--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -13,10 +13,6 @@
 
  border-radius: 10px;
  padding-right:20px;
- box-shadow:
-    0 0 6px 3px #fff,  /* inner white */
-    
-    0 0 13px 9px #00ff;   /* outer cyan */
 
  
 }
@@ -26,6 +22,15 @@
 
 .about-img {
     width: 100%;
-    height: 10vw;
+    height: 5vw;
     object-fit: fill;
+    background-size:inherit;
+}
+/* box-shadow: */
+/*0 0 6px 3px #fff,  /* inner white */
+
+/*0 0 13px 9px #00ff;   outer cyan */
+
+.MuiStepIcon-text {
+    color:blue !important;
 }
